k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: waverx-analysis
    olagoldhackxx: waverx-analysis
    sandbox: olagoldhackxx
  name: waverx-analysis
spec:
  ports:
    - name: 8000-tcp
      port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app: waverx-analysis
  sessionAffinity: None
  type: ClusterIP
