k8s/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: waverx-analysis
    olagoldhackxx: waverx-analysis
    sandbox: olagoldhackxx
  name: waverx-analysis
spec:
  port:
    targetPort: 8000-tcp
  to:
    kind: Service
    name: waverx-analysis
